Wiki/commonwiki.css
/* for shit like bg color. can be temporary, depending on what we want*/
@font-face {
    font-family: Uchen;
    src: url(/assets/Fonts/Uchen-Regular.eot); /* IE9 Compat Modes */
    src: url(/assets/Fonts/Uchen-Regular.eot) format(embedded-opentype), /* IE6-IE8 */
         url(/assets/Fonts/Uchen-Regular.woff) format(woff), /* Modern Browsers */
         url(/assets/Fonts/Uchen-Regular.ttf)  format(truetype), /* Safari, Android, iOS */
         url(/assets/Fonts/Uchen-Regular.svg) format(svg); /* Legacy iOS */
}
body,head {
    word-spacing: -6px;
    font-family: 'Uchen';
    background-color: rgb(26, 26, 26);
    color: whitesmoke;
}
a {
    text-decoration: underline;
    color: whitesmoke;

}
/*css for the infoboxes on the left of every page*/
.content {
    margin-left: 17em;
    margin-top: 7em;
    margin-right: 7em;
}
.infotable {
    float: right;
    padding: 5px;
    margin-left: 3px;
    border: 3px solid #003aff;
    width: 25%;
}

table,th,tr,td {
    border-collapse: collapse;
    border-spacing: 2px;
    border: 1px solid #a2a9b1;
}
col{
    border-collapse: collapse;
    border: 1px solid #a2a9b1;

}
th,td {
    padding: 0.2em 0.4em;
}

/*------------------------------------------------*/
/* TOC classes */
.hidden {
    max-height: 0;
    overflow:hidden;
    transition: max-height 0.5s ease-out;
}
nav {
    max-height: 330px;
    overflow: hidden;
    transition: max-height 0.5s ease-in;
}
.toc-hidebutton {
    padding-bottom: 0;
    padding-top: 5px;
    padding-left: 10px;
}
.toc-title {
    margin-top: 0;
    margin-bottom: 0;
    border-bottom: #a2a9b1 1px solid;
    padding: 5px;
}
.toc {
    display:table;
    padding: 7px;
    padding-top: 5px;
    border: 1px solid #a2a9b1;
    position: relative;
    word-wrap: break-word;
    line-height: 1.3;
    font-size: 1em;
    text-align: center;
}
.toc-link {
    text-align: center;
    text-decoration: none;
    color:white;
}
.toc-item-l1 {
    text-align: center;
    border:none;
    font-size: 16pt;
    border-bottom: 1px solid #a2a9b1;
}
.toc-item-l2 {
    text-align: center;
    border:none;
    font-size: 12pt;
    border-bottom: 1px solid #a2a9b1;
}

/*----------------------------------------------------*/
/* Other */
.redirect {
    text-decoration: underline;
    font-weight: bold;
}

